EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==04/22/2010==
Trevius: Added the following to Client Perl; GetEndurance(), GetMaxEndurance(), GetEnduranceRatio(), SetEndurance(amount).
Trevius: SoD - Size fix for player races.

==04/21/2010==
Trevius: SoD - The Mana and Endurance formulas are as close as I can get them for now.
Trevius: SoD - NPC default size is now 6 if the database is set to 0.
Trevius: It is no longer possible for current Endurance to be higher than max Endurance.
Trevius: Corrected a mistake pointed out by Rogean that was sending an unnecessary packet when clients were moving.

==04/19/2010==
gaeorn: bug fix so login server does not send world local_ip if option local_network is not set in login.ini

==04/18/2010==
Trevius: SoD - Added HP formulas for the SoD client, and a new rule to enable them for SoD clients only.

Optional SQL: utils/sql/svn/1394_optional_rule_sod_hp_mana_end.sql

==04/17/2010==
gaeorn: fixed login server auto-reconnect
cavedude (Leere): Tradeskill recipe learning
Congdar: fix windows compile: warning C4405: 'crc32' : identifier is reserved word
Congdar: fix windows compile: warning C4554: '>>' : check operator precedence for possible error; use parentheses to clarify precedence
Congdar: fix windows compile: warning C4800: 'char *' : forcing value to bool 'true' or 'false' (performance warning)

Required SQL: utils/sql/svn/1392_recipe_learning.sql

==04/16/2010==
KLS: (Leere) Melody Fix.
KLS: Other merges from spell branch, some more to come.  Tell me if there are any crashes I only tested it for about 25 minutes.

==04/15/2010==
cavedude (Leere): Increased the number of tradeskill favorites that can be stored client side to 500.
cavedude (Leere): Fixed avgcoin. 
cavedude (renoofturks): Fixes to SK harm touch.
cavedude: Lowered snare movement speed when fleeing to 41% or higher to allow "Snare" to prevent movement at all levels.